# Okta-SSH

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  test.js  test.rs
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  test_ouroboros.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/domain/: errors.rs  models.rs
src-tauri/src/infrastructure/: mod.rs  pty_process.rs  ssh2_client.rs
src-tauri/src/interfaces/: handlers.rs
src-tauri/src/interfaces/repositories/: store.rs
src-tauri/src/usecases/: connection_usecase.rs  mod.rs  pf_usecase.rs  sftp_usecase.rs  ssh_usecase.rs
src/data/: api.js
src/domain/: entities.js
src/presentation/models/: AppState.js
src/presentation/viewmodels/: AppViewModel.js
src/presentation/views/: AppView.js
